update positioning of captions to ensure they work correctly on mobile screens by moving them to the top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ iframe {
 
 .caption {
     position: absolute;
-    bottom: 30px;
+    top: 20px;
     left: 16px;
     background-color: rgba(71, 71, 71, 0.5);
     color: #FFF0B8;
